test/compare/testdata/fixedbugs/issue488.go
// errorcheck

package main

func f() int // ERROR `missing function body`

func main() { }
